# stt_nlu_ros

./: Dockerfile  README.md  run.sh
stt_nlu_actions/action/: CMakeLists.txt  package.xml
stt_nlu_actions/action/action/: NLExpectations.action
stt_nlu_msgs/: CMakeLists.txt  package.xml
stt_nlu_msgs/msg/: Goals_NLU.msg  Result_items.msg  Results_NLU.msg
stt_nlu_node/: CMakeLists.txt  package.xml
stt_nlu_node/scripts/: STT_NLU_server_node.py  client_exemple.py
stt_nlu_node/scripts/process/: parseNLP.py
